tests/NormalTests/paczka1/fuzzy1/24409296.err
Error in line 6: y7pK A506 53,45
Error in line 3: A909 S786 34,7
Error in line 30: DfhxI A689 31,7
